# vexlake

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  codecov.yml  docker-compose.yml  go.mod
.github/workflows/: ci.yml  release.yml
cmd/vexlake-bench/: main.go
cmd/vexlake-server/: main.go
crates/vexlake-bench/: Cargo.toml
crates/vexlake-bench/src/: main.rs
crates/vexlake-core/: Cargo.toml
crates/vexlake-core/benches/: vector_ops.rs
crates/vexlake-core/src/: error.rs  ffi.rs  index.rs  lib.rs  vector.rs
crates/vexlake-core/src/index/: hnsw.rs  mod.rs
crates/vexlake-core/src/storage/: metadata.rs  mod.rs  parquet.rs
docs/: 01_vexlake_design.md  02_seaweedfs_integration.md  03_development_plan.md
internal/core/: core.go
