[workspace]
resolver = "2"
members = [
    "crates/vexlake-core",
    "crates/vexlake-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/uzqw/vexlake"
homepage = "https://github.com/uzqw/vexlake"
documentation = "https://docs.rs/vexlake"
keywords = ["vector", "database", "search", "embedding", "simd"]
categories = ["database", "science"]

[workspace.dependencies]
# Arrow & DataFusion
arrow = "53"
datafusion = "43"
parquet = "53"
bytes = "1"

# Storage
opendal = { version = "0.50", features = ["services-s3", "services-memory"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FFI
libc = "0.2"

# Indexing & SIMD
simsimd = "6"
rayon = "1.10"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
criterion = "0.5"
tempfile = "3"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
