[package]
name = "vexlake-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark tooling for VexLake vector database"

[[bin]]
name = "vexlake-bench"
path = "src/main.rs"

[dependencies]
vexlake-core = { path = "../vexlake-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
